<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EditRule"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingTop="@dimen/site_padding"
    android:paddingBottom="@dimen/site_padding"
    android:paddingEnd="@dimen/site_padding">
    <!-- Linkes 1/3 des Bildschirms-->
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginEnd="@dimen/site_padding">
        <!--Autocomplete-Feld für Gruppen Filter-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@drawable/shape_filterbar_gradient_bg">
            <Space
                android:layout_width="@dimen/big_padding"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.AppCompatAutoCompleteTextView
                android:id="@+id/autocomplete_group_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/dropdown_filter_by_group"
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:theme="@style/AutocompleteGroup"
                android:enabled="false"
                android:scrollbars="vertical"
                android:dropDownHeight="@dimen/dropdown_height"
                />
                <!---->

            <!-- Icon für dropdown Selector-->
            <ImageView
                android:id="@+id/bt_dropdown_group_filter"
                android:src="@drawable/ic_arrow_drop_down_white"
                android:contentDescription="@string/dropdown_autocomplete_hint_show_options"
                android:padding="@dimen/bt_ic_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <GridView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/all_bricks_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/site_padding"
                android:background="@drawable/shape_service_bricks_rectangle"
                android:numColumns="3"
                android:columnWidth="50dp"
                android:verticalSpacing="@dimen/bt_ic_padding"
                android:horizontalSpacing="@dimen/bt_ic_padding"
                android:stretchMode="columnWidth"
                android:gravity="center"/>
    </LinearLayout>
    <!-- Rechtes 2/3 des Bildschirms-->
   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <LinearLayout
               android:id="@+id/precondition_view"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical" />
           <LinearLayout
               android:id="@+id/bt_layout_or"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:gravity="center">
               <Button
                   android:id="@+id/bt_or"
                   android:layout_width="@dimen/bt_width"
                   android:layout_height="@dimen/bt_height"
                   android:paddingStart="@dimen/big_padding"
                   android:paddingEnd="@dimen/big_padding"
                   android:text="@string/button_or"
                   android:drawableStart="@drawable/ic_or_arrows_black"
                   android:gravity="center"/>
           </LinearLayout>
           <LinearLayout
               android:id="@+id/action_view"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:gravity="center"/>
           <!--Export Button (layout um bt zentrieren)-->
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/bt_height"
               android:orientation="horizontal"
               android:gravity="center">
               <Button
                   android:id="@+id/bt_generate_rule"
                   android:layout_width="@dimen/bt_width"
                   android:layout_height="@dimen/bt_height"
                   android:paddingStart="@dimen/big_padding"
                   android:paddingEnd="@dimen/big_padding"
                   android:text="@string/button_generate_rule"
                   android:drawableStart="@drawable/ic_save_black"
                   android:gravity="center"/>
           </LinearLayout>
       </LinearLayout>
   </ScrollView>
</LinearLayout>
